tests/NormalTests/paczka1/fuzzy1/13719386.err
Error in line 3: nWlBDlJ0xk A708 27,1
Error in line 1: OIbQmHfEKM A766 33,7
Error in line 17: rCvMYt9EV3 A708 2,6
Error in line 21: OIbQmHfEKM S966 375,7
Error in line 18: gUZFxi A708 98,3
Error in line 25: rCvMYt9EV3 A763 117,9
Error in line 32: rCvMYt9EV3 S966 3,8
